# iCode

./: .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  esbuild.js  implementation_plan.md.resolved  index.html  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vibe-coding-architecture.md  vibe-coding-hook-system.md  vibe-coding-tech-stack.md  vite.config.extension.ts  vite.config.ts
.gemini/: settings.json
.github/workflows/: build.yml
src/: App.tsx  extension.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dialog.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_orchestrator.rs  event_bus.rs  git_engine.rs  hook_runner.rs  ipc_bridge.rs  lib.rs  main.rs  process_manager.rs  storage.rs
src/agent/: AgentManager.ts  SessionStore.ts  types.ts
src/components/: AgentStatusBadge.tsx
src/diff/: DiffManager.ts
src/features/diff-viewer/: DiffViewer.tsx
src/features/editor/: CodeEditor.tsx  FileExplorer.tsx
src/features/task-panel/: TaskPanel.tsx
src/features/terminal/: CenterTerminal.tsx  TerminalPane.tsx
src/features/terminal/hooks/: useTerminalInstance.ts
src/kanban/: KanbanManager.ts  KanbanStore.ts  types.ts
src/panel/: TaskPanelProvider.ts  getWebviewContent.ts
src/panel/webview/: App.svelte  App.tsx  index.html  main.ts  main.tsx  style.css  tsconfig.json
src/server/: GeminiHookInstaller.ts  HookInstaller.ts  HookServer.ts
src/services/ipc/: index.ts  types.ts
src/stores/: agentStore.ts  diffStore.ts  taskStore.ts  terminalStore.ts  workspaceStore.ts
(+9 files in other folders)
